RESOLVED FIXED 47342
SVGFEColorMatrixElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=47342
Summary SVGFEColorMatrixElement doesn't support dynamic invalidation
Renata Hodovan
Reported 2010-10-07 06:01:43 PDT
SVGFEColorMatrixElement doesn't support dynamic invalidation
Attachments
Patch for feColorMatrix properties (1.50 MB, patch)
2010-10-07 06:41 PDT, Renata Hodovan
krit: review-
krit: commit-queue-
Patch for feColorMatrix properties (1.33 MB, patch)
2010-10-08 09:05 PDT, Renata Hodovan
no flags
Renata Hodovan
Comment 1 2010-10-07 06:41:38 PDT
Created attachment 70076 [details] Patch for feColorMatrix properties
Dirk Schulze
Comment 2 2010-10-07 08:19:27 PDT
Comment on attachment 70076 [details] Patch for feColorMatrix properties The same problem like we had on feComposite? The fix looks good of course, but please delete the text in the SVG examples, so that DRT doesn't have useless informations. Also write more details in the ChangeLog how you solved the problem, that you added svgAttributeChanged and so on.
Renata Hodovan
Comment 3 2010-10-08 09:05:12 PDT
Created attachment 70254 [details] Patch for feColorMatrix properties
Andreas Kling
Comment 4 2010-10-08 09:09:14 PDT
Comment on attachment 70254 [details] Patch for feColorMatrix properties LGTM.
WebKit Commit Bot
Comment 5 2010-10-08 09:53:09 PDT
Comment on attachment 70254 [details] Patch for feColorMatrix properties Clearing flags on attachment: 70254 Committed r69409: <http://trac.webkit.org/changeset/69409>
WebKit Commit Bot
Comment 6 2010-10-08 09:53:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.