2010-10-08  Renata Hodovan  <reni@inf.u-szeged.hu>

Reviewed by Andreas Kling.

        SVGFEColorMatrixElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47342

        Adding layout tests for feColorMatrix dynamic changes.

        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-dom-in-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-dom-in-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-dom-type-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-dom-type-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-dom-values-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-dom-values-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-in-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-in-prop-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-type-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-type-prop-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-values-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-values-prop-expected.png: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-dom-in-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-dom-in-attr.html: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-dom-type-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-dom-type-attr.html: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-dom-values-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-dom-values-attr.html: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-in-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-in-prop.html: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-type-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-type-prop.html: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-values-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-values-prop.html: Added.
        * svg/dynamic-updates/script-tests/SVGFEColorMatrixElement-dom-in-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEColorMatrixElement-dom-type-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEColorMatrixElement-dom-values-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEColorMatrixElement-svgdom-in-prop.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEColorMatrixElement-svgdom-type-prop.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEColorMatrixElement-svgdom-values-prop.js: Added.
        (SVGNumberListToString):
        (executeTest):
2010-10-08  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Andreas Kling.

        SVGFEColorMatrixElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47342

        The dynamic changes are captured by the svgAttributeChange function, and invalidate the filter primitive if necessary.

        Tests: svg/dynamic-updates/SVGFEColorMatrixElement-dom-in-attr.html
               svg/dynamic-updates/SVGFEColorMatrixElement-dom-type-attr.html
               svg/dynamic-updates/SVGFEColorMatrixElement-dom-values-attr.html
               svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-in-prop.html
               svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-type-prop.html
               svg/dynamic-updates/SVGFEColorMatrixElement-svgdom-values-prop.html

        * svg/SVGFEColorMatrixElement.cpp:
        (WebCore::SVGFEColorMatrixElement::svgAttributeChanged):
        * svg/SVGFEColorMatrixElement.h:

Canonical link: https://commits.webkit.org/60010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69409 268f45cc-cd09-0410-ab3c-d52691b4dbfc